tests/negative/gold/abstract2-test.gold
tests/negative/abstract2-test.toit:10:12: error: Unresolved identifier: 'foo'
    return super
           ^~~~~
Compilation failed
